quark/test/quark/AST/Errors/unrecognizedCharacterc-002.qk
// RUN: not quark --emit-ast "%s" 2>&1 | FileCheck "%s"

fn foo: -> void {
  '';
}
// CHECK:Error: Unrecognized char '''
